[package]
name = "bevy_tiled_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.210"
serde_json = "*"
bevy = { version = "0.14.2", features = ["dynamic_linking"]}

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"